@@ -35,6 +35,7 @@ Features added
   images (imagesize-1.2.0 or above is required)
 * #6994: imgconverter: Support illustrator file (.ai) to .png conversion
 * autodoc: Support Positional-Only Argument separator (PEP-570 compliant)
+* #2755: autodoc: Add new event: :event:`autodoc-before-process-signature`
 * SphinxTranslator now calls visitor/departure method for super node class if
   visitor/departure method for original node class not found
 
